@@ -1,0 +1,28 @@
+/*
+ * synergy -- mouse and keyboard sharing utility
+ * Copyright (C) 2022 Symless Ltd.
+ *
+ * This package is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * found in the file LICENSE that should have accompanied this file.
+ *
+ * This package is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+#pragma once
+
+#if WINAPI_CARBON
+#include <memory>
+#include <Carbon/Carbon.h>
+
+using CFDeallocator = decltype(&CFRelease);
+using AutoCFArray = std::unique_ptr<const __CFArray, CFDeallocator>;
+using AutoCFDictionary = std::unique_ptr<const __CFDictionary, CFDeallocator>;
+using AutoTISInputSourceRef = std::unique_ptr<__TISInputSource, CFDeallocator>;
+
+#endif
