@@ -8,6 +8,7 @@ Bug fixes:
 - #7144 Fix double lines when pasting text from Linux to Windows
 - #7149 Address issues with modifiers and dead keys
 - #7163 Fix compilation issues for FreeBSD
+- #7164 Fix memory leaks in language sync and TLS functionality
 
 Github Actions:
 - #7148 Fix unstable build for windows core
